aggiunta documentazione sul caso Bonissi/Lenovo

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 	<meta name="twitter:title" content="#SistemaInoperativo" />
 	<meta name="twitter:creator" content="@ItaLinuxSociety" />
 	<meta name="twitter:card" content="summary" />
-	<meta name="twitter:url" content="http://www.sistemainoperativo.it/" />
-	<meta name="twitter:image" content="http://www.sistemainoperativo.it/img/tw.png" />
+	<meta name="twitter:url" content="https://sistemainoperativo.it/" />
+	<meta name="twitter:image" content="https://sistemainoperativo.it/img/tw.png" />
 
 	<meta property="og:site_name" content="#SistemaInoperativo" />
 	<meta property="og:title" content="#SistemaInoperativo" />
-	<meta property="og:url" content="http://www.sistemainoperativo.it/" />
-	<meta property="og:image" content="http://www.sistemainoperativo.it/img/fb.png" />
+	<meta property="og:url" content="https://sistemainoperativo.it/" />
+	<meta property="og:image" content="https://sistemainoperativo.it/img/fb.png" />
 	<meta property="og:type" content="website" />
 	<meta property="og:country-name" content="Italy" />
 	<meta property="og:email" content="webmaster@linux.it" />
@@ -108,7 +108,7 @@
 				<div class="col-lg-9">
 					<div class="col-lg-12">
 						<p>
-							L'11 settembre 2014, dopo una lunga battaglia legale sostenuta dall'<a href="http://aduc.it/">Associazione per i Diritti degli Utenti e Consumatori (ADUC)</a>, la Cassazione ha sancito il diritto ad ottenere il rimborso della licenza di Windows pre-installata sui computer di nuovo acquisto se questa non viene accettata.
+							L'11 settembre 2014, dopo una lunga battaglia legale sostenuta dall'<a rel="nofollow" href="http://aduc.it/">Associazione per i Diritti degli Utenti e Consumatori (ADUC)</a>, la Cassazione ha sancito il diritto ad ottenere il rimborso della licenza di Windows pre-installata sui computer di nuovo acquisto se questa non viene accettata.
 						</p>
 						<p>
 							Una grande notizia per tutti coloro che hanno adottato scelte differenti da quelle imposte, ma adesso tale diritto deve essere reso applicabile!
@@ -122,11 +122,8 @@
 						</p>
 						<p>&nbsp;</p>
 						<p>
-							Il 24 febbraio 2015 abbiamo inviato una lettera a diversi grandi produttori attivi sul mercato italiano, per avere delucidazioni sulla loro posizione e sulle procedure che intendono attivare per garantire il diritto sancito.
-						</p>
-						<p class="text-center">
-							<a href="#produttori" class="btn btn-default btn-lg">Leggi le Risposte</a>
-						</p>
+							Da allora su questo sito viene monitorato il comportamento dei produttori, sono raccolte le segnalazioni dei consumatori, e si forniscono strumenti e riferimenti utili per chi vuole esercitare il proprio diritto al rimborso.
+						<p>
 					</div>
 				</div>
 			</div>
@@ -272,7 +269,7 @@
 					</p>
 
 					<p class="alert alert-success">
-						<span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span> E' riportata <a href="http://www.acer.it/ac/it/IT/content/rimborso">sul sito</a>
+						<span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span> E' riportata <a rel="nofollow" href="http://www.acer.it/ac/it/IT/content/rimborso">sul sito</a>
 					</p>
 
 					<p class="alert alert-danger">
@@ -294,7 +291,7 @@
 					</p>
 					
 					<p class="alert alert-info">
-						<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Il <a href="http://www.dell.com/learn/it/it/itcorp1/terms-conditions/art-consumer-dell-emea-consumer-direct-ts-and-cs-010111-it">contratto di termini e condizioni d'uso</a>, all'articolo 7.3 dichiara esplicitamente che in caso di mancata approvazione della licenza del sistema operativo il computer deve essere restituito.
+						<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Il <a rel="nofollow" href="http://www.dell.com/learn/it/it/itcorp1/terms-conditions/art-consumer-dell-emea-consumer-direct-ts-and-cs-010111-it">contratto di termini e condizioni d'uso</a>, all'articolo 7.3 dichiara esplicitamente che in caso di mancata approvazione della licenza del sistema operativo il computer deve essere restituito.
 					</p>
 				</div>
 			</div>
@@ -319,10 +316,10 @@
 
 			<div class="row">
 				<div class="col-lg-3 col-lg-offset-3 text-center">
-					<a href="https://twitter.com/share?url=http%3A%2F%2Fsistemainoperativo.it%2F&text=Sul%20mio%20computer%20non%20voglio%20un%20%23sistemainoperativo%21%20%40Antitrust_it" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;" target="_blank" alt="Share on Twitter"><img src="img/twitter.png" /></a>
+					<a rel="nofollow" href="https://twitter.com/share?url=https%3A%2F%2Fsistemainoperativo.it%2F&text=Sul%20mio%20computer%20non%20voglio%20un%20%23sistemainoperativo%21%20%40Antitrust_it" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;" target="_blank" alt="Share on Twitter"><img src="img/twitter.png" /></a>
 				</div>
 				<div class="col-lg-3 text-center">
-					<a href="http://www.facebook.com/sharer.php?u=http%3A%2F%2Fsistemainoperativo.it%2F" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;" target="_blank" alt="Share on Facebook"><img src="img/facebook.png" /></a>
+					<a rel="nofollow" href="http://www.facebook.com/sharer.php?u=https%3A%2F%2Fsistemainoperativo.it%2F" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;" target="_blank" alt="Share on Facebook"><img src="img/facebook.png" /></a>
 				</div>
 			</div>
 
@@ -333,7 +330,7 @@
 						Se hai chiesto il rimborso della licenza ma hai avuto problemi:
 					</p>
 					<ul>
-						<li><a href="https://agcm.it/servizi/segnala-on-line">segnala la tua esperienza ad AGCM</a>: più segnalazioni arrivano, più l'Agenzia sarà indotta a prendere provvedimenti!</li>
+						<li><a rel="nofollow" href="https://agcm.it/servizi/segnala-on-line">segnala la tua esperienza ad AGCM</a>: più segnalazioni arrivano, più l'Agenzia sarà indotta a prendere provvedimenti!</li>
 						<li><a href="mailto:webmaster@linux.it">mandaci una mail</a> con la documentazione relativa, da pubblicare su questo sito e mettere in guardia gli altri consumatori sui comportamenti dei singoli distributori</li>
 					</ul>
 				</div>
@@ -391,6 +388,15 @@
 									<a href="documenti/bonissi_microsoft_completo.tar.gz">Documentazione Completa</a>
 								</td>
 							</tr>
+							<tr>
+							    <td><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span></td>
+								<td>Luca Bonissi</td>
+								<td>Lenovo</td>
+								<td>
+									A seguito di una lunga controversia legale il giudizio in secondo grado ha riconosciuto il rimborso di 42 euro per la licenza, 1.000 per le spese legali, ed ha condannato Lenovo Italy S.r.l al rimborso di 20.000 euro a titolo di risarcimento del danno da responsabilità processuale aggravata.<br>
+									<a href="documenti/bonissi_lenovo_completo.tar.gz">Documentazione Completa</a>
+								</td>
+							</tr>
 						</tbody>
 					</table>
 				</div>
@@ -409,12 +415,12 @@
 			<div class="row">
 				<div class="col-lg-4 text-center">
 					<p>
-						Per aggiornamenti periodici sul diritto al rimborso delle licenze di software pre-installato, consulta l'<a href="http://avvertenze.aduc.it/rimborsowindows/">apposito canale sul sito ADUC</a>.
+						Per aggiornamenti periodici sul diritto al rimborso delle licenze di software pre-installato, consulta l'<a rel="nofollow" href="http://avvertenze.aduc.it/rimborsowindows/">apposito canale sul sito ADUC</a>.
 					</p>
 				</div>
 				<div class="col-lg-4 text-center">
 					<p>
-						Vuoi chiedere il rimborso della licenza ma non sai da che parte iniziare? Usa <a href="http://sosonline.aduc.it/modulo/richiesta+rimborso+microsoft+windows+pre+installato_9461.php">questo modulo</a> come punto di partenza!
+						Vuoi chiedere il rimborso della licenza ma non sai da che parte iniziare? Usa <a rel="nofollow" href="http://sosonline.aduc.it/modulo/richiesta+rimborso+microsoft+windows+pre+installato_9461.php">questo modulo</a> come punto di partenza!
 					</p>
 				</div>
 				<div class="col-lg-4 text-center">
@@ -432,8 +438,8 @@
 				<p>Per segnalazioni e contatti scrivi a <a href="mailto:webmaster@linux.it?subject=Sistema%20INOperativo">webmaster@linux.it</a></p>
 			</div>
 			<div class="col-lg-6 text-right">
-				<p>Powered by <a href="http://www.ils.org/">Italian Linux Society</a></p>
-				<p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a></p>
+				<p>Powered by <a href="https://www.ils.org/">Italian Linux Society</a></p>
+				<p><a rel="nofollow" rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a></p>
 			</div>
 		</div>
 	</section>
@@ -443,21 +449,24 @@
 	<script src="js/jquery.easing.min.js"></script>
 	<script src="js/scrolling-nav.js"></script>
 
-	<!-- Piwik -->
+	<!-- Matomo -->
 	<script type="text/javascript">
-		var _paq = _paq || [];
-		_paq.push(['trackPageView']);
-		_paq.push(['enableLinkTracking']);
-		(function() {
-			var u=(("https:" == document.location.protocol) ? "https" : "http") + "://pergamena.lugbs.linux.it/";
-			_paq.push(['setTrackerUrl', u+'piwik.php']);
-			_paq.push(['setSiteId', 16]);
-			var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0]; g.type='text/javascript';
-			g.defer=true; g.async=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
-		})();
+	  var _paq = window._paq || [];
+	  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+	  _paq.push(["setDomains", ["*.sistemainoperativo.it"]]);
+	  _paq.push(["setDoNotTrack", true]);
+	  _paq.push(["disableCookies"]);
+	  _paq.push(['trackPageView']);
+	  _paq.push(['enableLinkTracking']);
+	  (function() {
+	    var u="//stats.madbob.org/";
+	    _paq.push(['setTrackerUrl', u+'matomo.php']);
+	    _paq.push(['setSiteId', '18']);
+	    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+	    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+	  })();
 	</script>
-	<noscript><p><img src="http://pergamena.lugbs.linux.it/piwik.php?idsite=16" style="border:0;" alt="" /></p></noscript>
-	<!-- End Piwik Code -->
+	<!-- End Matomo Code -->
 
 </body>
 
