--- a/index.html
+++ b/index.html
@@ -360,6 +360,14 @@
 									<a href="documenti/bonissi_lenovo_completo.tar.gz">Documentazione Completa</a>
 								</td>
 							</tr>
+							<tr>
+								<td>Luca Bonissi</td>
+								<td>HP</td>
+								<td>
+									La richiesta di rimborso è stata negata diverse volte, ma il Giudice di Pace di Monza ha riconosciuto il rimborso di 361 euro per le licenze pre-installate (sia di Windows 10 Home che di Office 365 Personal) ed il risarcimento danni. La sentenza non è ancora passata in giudicato.<br>
+									<a href="documenti/bonissi_hp_completo.tar.gz">Documentazione Completa</a>
+								</td>
+							</tr>
 						</tbody>
 					</table>
 				</div>
