tutorial per richiesta rimborso

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 					<h3>Fatti Sentire!</h3>
 
 					<p class="lead">
-						Condividi la campagna con gli amici, e sollecita i produttori a esprimere una chiara posizione nei tuoi confronti!
+						Condividi questa pagina con gli amici, e sollecita i produttori a esprimere una chiara posizione nei tuoi confronti!
 					</p>
 				</div>
 			</div>
@@ -296,13 +296,20 @@
 
 			<div class="row mb-5">
 				<div class="col-lg-12">
-					<p>
-						Se hai chiesto il rimborso della licenza ma hai avuto problemi:
-					</p>
-					<ul>
-						<li><a rel="nofollow" href="https://agcm.it/servizi/segnala-on-line">segnala la tua esperienza ad AGCM</a>: più segnalazioni arrivano, più l'Agenzia sarà indotta a prendere provvedimenti!</li>
-						<li><a href="mailto:webmaster@linux.it">mandaci una mail</a> con la documentazione relativa, da pubblicare su questo sito e mettere in guardia gli altri consumatori sui comportamenti dei singoli distributori</li>
-					</ul>
+					<h4>Come chiedere il rimborso della licenza Windows:</h4>
+
+					<ol>
+						<li>Ovviamente, acquistare il prodotto: senza avere il contratto "in mano" di sicuro non si può fare nessuna causa.</li>
+						<li>Avviare il PC e fare una foto della schermata in cui ci sono le clausole del contratto in cui viene indicata il rimborso, meglio ancora se si fa un video facendo scorrere tutto il contratto (può essere utile più avanti).</li>
+						<li>Se possibile, non procedere ancora alla formattazione.</li>
+						<li>Contattare il servizio clienti del produttore, tramite telefono o meglio ancora chat/email, e conservare la relativa corrispondenza (per il telefono segnare data, ora e con chi si è parlato; per la chat fare copia/incolla di quello che è stato scritto).</li>
+						<li>Se rispondono negativamente, inviare una lettera di messa in mora (<a href="modello_lettara_rimborso_licenza_windows.odt">qui trovi un modello da completare</a>). Per la quantificazione del rimborso è bene prendere 2-3 modelli di PC che sono disponibili sia con che senza Windows e fare la media della differenza di prezzo.</li>
+						<li>A questo punto si può procedere alla formattazione del PC.</li>
+						<li>Se rispondono che il rimborso non è dovuto, è bene replicare più estesamente indicando i passi significativi delle varie sentenze che decretano il diritto al rimborso.</li>
+						<li>Alla fine smetteranno di rispondere: è bene inviare un'ultima lettera di messa in mora per essere dalla parte del giusto.</li>
+						<li>Se si è arrivati fino a qui vuol dire che si ha la determinazione per rivolgersi al Giudice di Pace: ottimo! Scrivici e ti aiuteremo a disporre l'atto di citazione, con qualche indicazione pratica di come si svolge l'udienza e quali accortezze tenere per evitare di "impanicarsi". L'atto di citazione e la prima udienza si posso fare senza avvocato, poi si valuterà se rivolgersi ad un legale in base alla comparsa di costituzione (ovvero la risposta all'atto di citazione) che presenterà il produttore.</li>
+						<li>In tutti i casi, se hai chiesto il rimborso della licenza ma hai avuto problemi ricorda di <a rel="nofollow" href="https://agcm.it/servizi/segnala-on-line">segnalare la tua esperienza ad AGCM</a>: più segnalazioni arrivano, più l'Agenzia sarà indotta a prendere provvedimenti!</li>
+					</ol>
 				</div>
 			</div>
 			
