aggiunto caso Tregnaghi/Dell

--- a/index.html
+++ b/index.html
@@ -375,6 +375,14 @@
 									<a href="documenti/bonissi_hp_completo.tar.gz">Documentazione Completa</a>
 								</td>
 							</tr>
+							<tr>
+								<td>Francesca Tregnaghi</td>
+								<td>Dell</td>
+								<td>
+									Dopo un paio di PEC è stato riconosciuto il rimborso di 51 euro per la licenza Windows 10 Home Edition.<br>
+									<a href="documenti/tregnaghi_dell_completo.tar.gz">Documentazione Completa</a>
+								</td>
+							</tr>
 						</tbody>
 					</table>
 				</div>
