aggiunto contatto di Luca Bonissi

--- a/index.html
+++ b/index.html
@@ -305,10 +305,11 @@
 						<li>Contattare il servizio clienti del produttore, tramite telefono o meglio ancora chat/email, e conservare la relativa corrispondenza (per il telefono segnare data, ora e con chi si è parlato; per la chat fare copia/incolla di quello che è stato scritto).</li>
 						<li>Se rispondono negativamente, inviare una lettera di messa in mora (<a href="modello_lettara_rimborso_licenza_windows.odt">qui trovi un modello da completare</a>). Per la quantificazione del rimborso è bene prendere 2-3 modelli di PC che sono disponibili sia con che senza Windows e fare la media della differenza di prezzo.</li>
 						<li>A questo punto si può procedere alla formattazione del PC.</li>
-						<li>Se rispondono che il rimborso non è dovuto, è bene replicare più estesamente indicando i passi significativi delle varie sentenze che decretano il diritto al rimborso.</li>
+						<li>Se rispondono che il rimborso non è dovuto, è bene replicare più dettagliatamente indicando i passi significativi delle varie sentenze che decretano il diritto al rimborso.</li>
 						<li>Alla fine smetteranno di rispondere: è bene inviare un'ultima lettera di messa in mora per essere dalla parte del giusto.</li>
 						<li>Se si è arrivati fino a qui vuol dire che si ha la determinazione per rivolgersi al Giudice di Pace: ottimo! Scrivici e ti aiuteremo a disporre l'atto di citazione, con qualche indicazione pratica di come si svolge l'udienza e quali accortezze tenere per evitare di "impanicarsi". L'atto di citazione e la prima udienza si posso fare senza avvocato, poi si valuterà se rivolgersi ad un legale in base alla comparsa di costituzione (ovvero la risposta all'atto di citazione) che presenterà il produttore.</li>
 						<li>In tutti i casi, se hai chiesto il rimborso della licenza ma hai avuto problemi ricorda di <a rel="nofollow" href="https://agcm.it/servizi/segnala-on-line">segnalare la tua esperienza ad AGCM</a>: più segnalazioni arrivano, più l'Agenzia sarà indotta a prendere provvedimenti!</li>
+						<li>Per assistenza gratuita nell'ottenimento del rimborso, anche per le prime fasi, è possibile contattare Luca Bonissi - esperto del settore, con all'attivo numerosi casi - all'indirizzo email rimborsowindows@bonissi.it</li>
 					</ol>
 				</div>
 			</div>
