aggiunto caso Castiglia/Lenovo

--- a/index.html
+++ b/index.html
@@ -384,6 +384,14 @@
 									<a href="documenti/tregnaghi_dell_completo.tar.gz">Documentazione Completa</a>
 								</td>
 							</tr>
+							<tr>
+								<td>Vincenzo Castiglia</td>
+								<td>Lenovo</td>
+								<td>
+									Dopo una lunga serie di email e telefonate è stato riconosciuto il rimborso di 42 euro per la licenza Windows 10 Home Edition. Vincenzo ha scelto di dare le coordinate bancarie di Italian Linux Society per il versamento.<br>
+									<a href="documenti/castiglia_lenovo_completo.tar.gz">Documentazione Completa</a>
+								</td>
+							</tr>
 						</tbody>
 					</table>
 				</div>
