--- a/index.html
+++ b/index.html
@@ -392,6 +392,14 @@
 									<a href="documenti/castiglia_lenovo_completo.tar.gz">Documentazione Completa</a>
 								</td>
 							</tr>
+							<tr>
+								<td>Silvia</td>
+								<td>Lenovo</td>
+								<td>
+									Dopo uno scambio di email particolarmente prolungato è stato riconosciuto il rimborso di 47 euro per la licenza Windows 10 Home Edition.<br>
+									<a href="documenti/silvia_lenovo_completo.tar.gz">Documentazione Completa</a>
+								</td>
+							</tr>
 						</tbody>
 					</table>
 				</div>
