revert "aggiornato stato di Lenovo". ci avevo sperato...
This reverts commit 4ef2d40403f7abc014f549b6838b924c9f5ca38b.

--- a/index.html
+++ b/index.html
@@ -199,16 +199,12 @@
 						<img src="img/lenovo.png" class="img-fluid" />
 					</p>
 
-					<p class="alert alert-success">
-						È prevista una procedura di rimborso
-					</p>
-
-					<p class="alert alert-success">
-						E' riportata <a rel="nofollow" href="https://support.lenovo.com/it/it/solutions/HT512090">sul sito</a>
-					</p>
-
 					<p class="alert alert-danger">
-						Occorre inviare il PC
+						Non è prevista una procedura di rimborso
+					</p>
+
+					<p class="alert alert-info">
+						Diversi tentativi di contatto sono stati effettuati da diversi clienti, e sono sempre stati ignorati dall'azienda.
 					</p>
 				</div>
 
