aggiunti casi Bonissi/Lenovo e Bonissi/Acer

--- a/index.html
+++ b/index.html
@@ -199,12 +199,16 @@
 						<img src="img/lenovo.png" class="img-fluid" />
 					</p>
 
-					<p class="alert alert-danger">
-						Non è prevista una procedura di rimborso
+					<p class="alert alert-success">
+						È prevista una procedura di rimborso
 					</p>
 
-					<p class="alert alert-info">
-						Diversi tentativi di contatto sono stati effettuati da diversi clienti, e sono sempre stati ignorati dall'azienda.
+					<p class="alert alert-success">
+						È riportata <a rel="nofollow" href="https://support.lenovo.com/it/it/solutions/HT512090">sul sito</a>
+					</p>
+
+					<p class="alert alert-danger">
+						Occorre inviare il PC
 					</p>
 				</div>
 
@@ -214,7 +218,7 @@
 					</p>
 
 					<p class="alert alert-success">
-						E' prevista una procedura di rimborso
+						È prevista una procedura di rimborso
 					</p>
 
 					<p class="alert alert-danger">
@@ -240,11 +244,11 @@
 					</p>
 
 					<p class="alert alert-success">
-						E' prevista una procedura di rimborso
+						È prevista una procedura di rimborso
 					</p>
 
 					<p class="alert alert-success">
-						E' riportata <a rel="nofollow" href="http://www.acer.it/ac/it/IT/content/rimborso">sul sito</a>
+						È riportata <a rel="nofollow" href="http://www.acer.it/ac/it/IT/content/rimborso">sul sito</a>
 					</p>
 
 					<p class="alert alert-danger">
@@ -398,6 +402,23 @@
 								<td>
 									Dopo uno scambio di email particolarmente prolungato è stato riconosciuto il rimborso di 47 euro per la licenza Windows 10 Home Edition.<br>
 									<a href="documenti/silvia_lenovo_completo.tar.gz">Documentazione Completa</a>
+								</td>
+							</tr>
+							<tr>
+								<td>Luca Bonissi</td>
+								<td>Lenovo</td>
+								<td>
+									Oggetto del contendere è stato - come in diversi altri casi - la presunta necessità di restituire il PC. Alla fine è stato riconosciuto un rimborso di 75 euro per la licenza Windows 11 Home.<br>
+									<a href="documenti/bonissi_lenovo2_completo.tar.gz">Documentazione Completa</a>
+								</td>
+							</tr>
+							<tr>
+								<td>Luca Bonissi</td>
+								<td>Acer</td>
+								<td>
+									Benché Acer abbia una procedura per il rimborso della licenza Windows, essa prevede l'invio del PC, lunghi tempi di attesa ed una compensazione irrisoria: di fatto tale procedura esiste al solo scopo di risultare sconveniente ed impraticabile.<br>
+									Il lungo scambio di messaggi PEC tra Luca e Acer, culminato nella suggestione di una causa in tribunale, si è concluso con un rimborso di 129 euro.<br>
+									<a href="documenti/bonissi_acer_completo.tar.gz">Documentazione Completa</a>
 								</td>
 							</tr>
 						</tbody>
